@@ -2,6 +2,7 @@ package dev.openfeature.sdk;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -9,6 +10,7 @@ import dev.openfeature.sdk.fixtures.HookFixtures;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import org.junit.jupiter.api.DisplayName;
@@ -17,22 +19,31 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 
 class HookSupportTest implements HookFixtures {
+
+    private static final HookSupport hookSupport = new HookSupport();
+
     @Test
     @DisplayName("should merge EvaluationContexts on before hooks correctly")
     void shouldMergeEvaluationContextsOnBeforeHooksCorrectly() {
         Map<String, Value> attributes = new HashMap<>();
         attributes.put("baseKey", new Value("baseValue"));
         EvaluationContext baseContext = new ImmutableContext(attributes);
-        HookContext<String> hookContext = new HookContext<>(
-                "flagKey", FlagValueType.STRING, "defaultValue", baseContext, () -> "client", () -> "provider");
+
         Hook<String> hook1 = mockStringHook();
         Hook<String> hook2 = mockStringHook();
         when(hook1.before(any(), any())).thenReturn(Optional.of(evaluationContextWithValue("bla", "blubber")));
         when(hook2.before(any(), any())).thenReturn(Optional.of(evaluationContextWithValue("foo", "bar")));
-        HookSupport hookSupport = new HookSupport();
 
-        EvaluationContext result = hookSupport.beforeHooks(
-                FlagValueType.STRING, hookContext, Arrays.asList(hook1, hook2), Collections.emptyMap());
+        var hookSupportData = new HookSupportData();
+        hookSupportData.initialize(
+                Arrays.asList(hook1, hook2),
+                getBaseHookContextForType(FlagValueType.STRING),
+                baseContext,
+                Collections.emptyMap());
+
+        hookSupport.executeBeforeHooks(hookSupportData);
+
+        EvaluationContext result = hookSupportData.getEvaluationContext();
 
         assertThat(result.getValue("bla").asString()).isEqualTo("blubber");
         assertThat(result.getValue("foo").asString()).isEqualTo("bar");
@@ -44,42 +55,102 @@ class HookSupportTest implements HookFixtures {
     @DisplayName("should always call generic hook")
     void shouldAlwaysCallGenericHook(FlagValueType flagValueType) {
         Hook<?> genericHook = mockGenericHook();
-        HookSupport hookSupport = new HookSupport();
-        EvaluationContext baseContext = new ImmutableContext();
-        IllegalStateException expectedException = new IllegalStateException("All fine, just a test");
-        HookContext<Object> hookContext = new HookContext<>(
-                "flagKey",
-                flagValueType,
-                createDefaultValue(flagValueType),
-                baseContext,
-                () -> "client",
-                () -> "provider");
 
-        hookSupport.beforeHooks(
-                flagValueType, hookContext, Collections.singletonList(genericHook), Collections.emptyMap());
-        hookSupport.afterHooks(
-                flagValueType,
-                hookContext,
-                FlagEvaluationDetails.builder().build(),
-                Collections.singletonList(genericHook),
+        var hookSupportData = new HookSupportData();
+        hookSupportData.initialize(
+                List.of(genericHook),
+                getBaseHookContextForType(flagValueType),
+                ImmutableContext.EMPTY,
                 Collections.emptyMap());
-        hookSupport.afterAllHooks(
-                flagValueType,
-                hookContext,
-                FlagEvaluationDetails.builder().build(),
-                Collections.singletonList(genericHook),
-                Collections.emptyMap());
-        hookSupport.errorHooks(
-                flagValueType,
-                hookContext,
-                expectedException,
-                Collections.singletonList(genericHook),
-                Collections.emptyMap());
+
+        callAllHooks(hookSupportData);
 
         verify(genericHook).before(any(), any());
         verify(genericHook).after(any(), any(), any());
         verify(genericHook).finallyAfter(any(), any(), any());
         verify(genericHook).error(any(), any(), any());
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = FlagValueType.class)
+    @DisplayName("should allow hooks to store and retrieve data across stages")
+    void shouldPassDataAcrossStages(FlagValueType flagValueType) {
+        var testHook = new TestHookWithData();
+        var hookSupportData = new HookSupportData();
+        hookSupportData.initialize(
+                List.of(testHook),
+                getBaseHookContextForType(flagValueType),
+                ImmutableContext.EMPTY,
+                Collections.emptyMap());
+
+        hookSupport.executeBeforeHooks(hookSupportData);
+        assertHookData(testHook, "before");
+
+        hookSupport.executeAfterHooks(
+                hookSupportData, FlagEvaluationDetails.builder().build());
+        assertHookData(testHook, "before", "after");
+
+        hookSupport.executeAfterAllHooks(
+                hookSupportData, FlagEvaluationDetails.builder().build());
+        assertHookData(testHook, "before", "after", "finallyAfter");
+
+        hookSupport.executeErrorHooks(hookSupportData, mock(Exception.class));
+        assertHookData(testHook, "before", "after", "finallyAfter", "error");
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = FlagValueType.class)
+    @DisplayName("should isolate data between different hook instances")
+    void shouldIsolateDataBetweenHooks(FlagValueType flagValueType) {
+        var testHook1 = new TestHookWithData(1);
+        var testHook2 = new TestHookWithData(2);
+
+        var hookSupportData = new HookSupportData();
+        hookSupportData.initialize(
+                List.of(testHook1, testHook2),
+                getBaseHookContextForType(flagValueType),
+                ImmutableContext.EMPTY,
+                Collections.emptyMap());
+
+        callAllHooks(hookSupportData);
+
+        assertHookData(testHook1, 1, "before", "after", "finallyAfter", "error");
+        assertHookData(testHook2, 2, "before", "after", "finallyAfter", "error");
+    }
+
+    private static void callAllHooks(HookSupportData hookSupportData) {
+        hookSupport.executeBeforeHooks(hookSupportData);
+        hookSupport.executeAfterHooks(
+                hookSupportData, FlagEvaluationDetails.builder().build());
+        hookSupport.executeAfterAllHooks(
+                hookSupportData, FlagEvaluationDetails.builder().build());
+        hookSupport.executeErrorHooks(hookSupportData, mock(Exception.class));
+    }
+
+    private static void assertHookData(TestHookWithData testHook, String... expectedKeys) {
+        for (String expectedKey : expectedKeys) {
+            assertThat(testHook.hookData.get(expectedKey))
+                    .withFailMessage("Expected key %s not present in hook data", expectedKey)
+                    .isNotNull();
+        }
+    }
+
+    private static void assertHookData(TestHookWithData testHook, Object expectedValue, String... expectedKeys) {
+        for (String expectedKey : expectedKeys) {
+            assertThat(testHook.hookData.get(expectedKey))
+                    .withFailMessage("Expected key '%s' not present in hook data", expectedKey)
+                    .isNotNull();
+            assertThat(testHook.hookData.get(expectedKey))
+                    .withFailMessage(
+                            "Expected key '%s' not containing expected value. Expected '%s' but found '%s'",
+                            expectedKey, expectedValue, testHook.hookData.get(expectedKey))
+                    .isEqualTo(expectedValue);
+        }
+    }
+
+    private SharedHookContext getBaseHookContextForType(FlagValueType flagValueType) {
+        return new SharedHookContext<>(
+                "flagKey", flagValueType, () -> "client", () -> "provider", createDefaultValue(flagValueType));
     }
 
     private Object createDefaultValue(FlagValueType flagValueType) {
@@ -102,7 +173,44 @@ class HookSupportTest implements HookFixtures {
     private EvaluationContext evaluationContextWithValue(String key, String value) {
         Map<String, Value> attributes = new HashMap<>();
         attributes.put(key, new Value(value));
-        EvaluationContext baseContext = new ImmutableContext(attributes);
-        return baseContext;
+        return new ImmutableContext(attributes);
+    }
+
+    private static class TestHookWithData implements Hook {
+        private final Object value;
+        HookData hookData = null;
+
+        public TestHookWithData(Object value) {
+            this.value = value;
+        }
+
+        public TestHookWithData() {
+            this("test");
+        }
+
+        @Override
+        public Optional<EvaluationContext> before(HookContext ctx, Map hints) {
+            ctx.getHookData().set("before", value);
+            hookData = ctx.getHookData();
+            return Optional.empty();
+        }
+
+        @Override
+        public void after(HookContext ctx, FlagEvaluationDetails details, Map hints) {
+            ctx.getHookData().set("after", value);
+            hookData = ctx.getHookData();
+        }
+
+        @Override
+        public void error(HookContext ctx, Exception error, Map hints) {
+            ctx.getHookData().set("error", value);
+            hookData = ctx.getHookData();
+        }
+
+        @Override
+        public void finallyAfter(HookContext ctx, FlagEvaluationDetails details, Map hints) {
+            ctx.getHookData().set("finallyAfter", value);
+            hookData = ctx.getHookData();
+        }
     }
 }
